granica tabeli pogrupowanych źródeł pokrycia

--- a/strona/index.html
+++ b/strona/index.html
@@ -217,7 +217,7 @@
 
     <table class = "sortable">
       <thead>
-        <tr>
+        <tr class = "bordered_2">
           <th>ŹRÓDŁO POKRYCIA TERENU</th>
           <th>AGLOMERACJA ŚREDNIA</th>
           <th>AGLOMERACJA KAPPA</th>
@@ -226,42 +226,42 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr class = "bordered_2">
           <td>LUCAS</td>
           <td>0,802</td>
           <td>0,713</td>
           <td>0,693</td>
           <td>0,590</td>
         </tr>
-        <tr>
+        <tr class = "bordered_2">
           <td>ESA</td>
           <td>0,786</td>
           <td>0,695</td>
           <td>0,644</td>
           <td>0,535</td>
         </tr>
-        <tr>
+        <tr class = "bordered_2">
           <td>Esri</td>
           <td>0,787</td>
           <td>0,691</td>
           <td>0,660</td>
           <td>0,545</td>
         </tr>
-        <tr>
+        <tr class = "bordered_2">
           <td>Sentinel-2</td>
           <td>0,754</td>
           <td>0,658</td>
           <td>0,628</td>
           <td>0,530</td>
         </tr>
-        <tr>
+        <tr class = "bordered_2">
           <td>CLC</td>
           <td>0,771</td>
           <td>0,668</td>
           <td>0,636</td>
           <td>0,508</td>
         </tr>
-        <tr>
+        <tr class = "bordered_2">
           <td>Urban Atlas</td>
           <td>0,742</td>
           <td>0,644</td>
@@ -280,7 +280,7 @@
  
    <table class = "sortable">
     <thead>
-      <tr>
+      <tr class = "bordered">
         <th>POKRYCIE TERENU</th>
         <th>lucas_PA</th>
         <th>lucas_UA</th>
@@ -303,7 +303,7 @@
       </tr>
     </thead>
      <tbody>
-       <tr>
+       <tr class = "bordered">
          <td>Obszary podmokłe</td>
          <td>0,11</td>
          <td>0,55</td>
@@ -324,7 +324,7 @@
          <td>0,47</td>
          <td>0,02</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Obszary wodne</td>
          <td>0,70</td>
          <td>0,91</td>
@@ -345,7 +345,7 @@
          <td>0,93</td>
          <td>0,83</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Zabudowa</td>
          <td>0,75</td>
          <td>0,64</td>
@@ -366,7 +366,7 @@
          <td>0,65</td>
          <td>0,74</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Lasy</td>
          <td>0,92</td>
          <td>0,87</td>
@@ -387,7 +387,7 @@
          <td>0,87</td>
          <td>0,89</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Obszary trawiaste i krzewiaste</td>
          <td>0,37</td>
          <td>0,57</td>
@@ -408,7 +408,7 @@
          <td>0,37</td>
          <td>0,42</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Pola uprawne</td>
          <td>0,93</td>
          <td>0,86</td>
@@ -441,7 +441,7 @@
  
    <table class = "sortable">
     <thead>
-      <tr>
+      <tr class = "bordered">
         <th>POKRYCIE TERENU</th>
         <th>lucas_PA</th>
         <th>lucas_UA</th>
@@ -464,7 +464,7 @@
       </tr>
     </thead>
      <tbody>
-       <tr>
+       <tr class = "bordered">
          <td>Obszary podmokłe</td>
          <td>0,16</td>
          <td>0,47</td>
@@ -485,7 +485,7 @@
          <td>-</td>
          <td>-</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Obszary wodne</td>
          <td>0,70</td>
          <td>0,94</td>
@@ -506,7 +506,7 @@
          <td>0,97</td>
          <td>0,88</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Zabudowa</td>
          <td>0,86</td>
          <td>0,69</td>
@@ -527,7 +527,7 @@
          <td>0,69</td>
          <td>0,79</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Lasy</td>
          <td>0,81</td>
          <td>0,81</td>
@@ -548,7 +548,7 @@
          <td>0,78</td>
          <td>0,77</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Obszary trawiaste i krzewiaste</td>
          <td>0,38</td>
          <td>0,62</td>
@@ -569,7 +569,7 @@
          <td>0,62</td>
          <td>0,53</td>
        </tr>
-       <tr>
+       <tr class = "bordered">
          <td>Pola uprawne</td>
          <td>0,86</td>
          <td>0,61</td>
