--- a/strona/index.html
+++ b/strona/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html lang="pl">
 <head>
-<title>WPN - korelacja NDVI</title>
-<link rel="icon" href="wykresy/img/ndvi_logo.png" type="image/icon type">
+<title>Porównanie dokładności źródeł terenu</title>
+<link rel="icon" href="grafiki/tlo/logo.png" type="image/icon type">
 <meta charset="utf-8">
-<meta name="description" content="Ocena korelacji wskaźnika NDVI z zagospodarowaniem terenu oraz temperaturą gruntu dla WOlińskiego Parku Narodowego imiasta Międzyzdroje">
+<meta name="description" content="Porównanie dokładności różnych źródeł pokrycia terenu na przykładzie miasta Poznań i powiatu poznańskiego">
 <meta name="keywords" content="NVDI, UAM, geoinformacja, sekcja geoinformacji, wskaźnik NVDI, Wolin, Międzyzdroje, Woliński Park Narodowy, WPN, WNGiG, Wydział Nauk Geograficznych i Geologicznych, pokrycie terenu, roślinność, temperatura, korelacja, temperatura gruntu", >
 <meta name="author" content="Sekcja geoinformacji">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -227,7 +227,7 @@
        pozwalającą określić stopień zgodności pomiędzy reklasyfikacjami, uwzględniającą przypadkowe zgodności i błędy.
       </p>
 
-      <p class = "paragraf">Najdokładniejszym zasobem w obu obszarach (powiecie poznańskim oraz mieście Poznań) okazał się LUCAS, 
+      <p class = "paragraf">Najdokładniejszym zasobem w obu obszarach (całej aglomeracji oraz mieście Poznań) okazał się LUCAS, 
         o dokładności 0,80 i Kappa wynoszącym 0,73. Najsłabszym natomiast - Urban Atlas, z dokładnością i kappa wynoszącym odpowiednio 0,74 i 0,64.
       Obszar miasta Poznania najdokładniej względem BDOT został sklasyfikowany przez ten sam zasób - Urban Atlas (dokładność: 0,71, Kappa: 0,6),
       czyli projekt obejmujący pokrycie terenu głównie miejskich obszarów. Najmniej dokładnym zasobem w powiecie Poznań okazał się Sentinel-2,
@@ -298,11 +298,21 @@
       </table>
   </div>
 
-  <p class = "paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel maximus mauris, id hendrerit massa. 
-    Vivamus commodo leo quis diam venenatis, nec cursus dui consequat. Nullam ante augue, condimentum quis feugiat quis, 
-    viverra vulputate metus. Ut a maximus odio. Sed quis lacinia metus. 
+  <p class = "paragraf">Poza oceną dokładności wszystkich źródeł danych, przeanalizowano również poszczególne klasy 
+    pokrycia terenu każdego z nich. Poniżej przedstawiono procentowy udział niepoprawnie zaklasyfikowanych względem BDOT kategorii pokrycia terenu,
+    uzyskany na podstawie macierzy błędów (ryc. 6-7). W przypadku miasta Poznań, średnia błędu dla obszarów podmokłych nie obejmuje zasobu Urban Atlas, ze względu
+    na brak tej klasy występującej na obszarze powiatu Poznań.
   </p>
 
+  <p class = "paragraf">Klasą obarczoną największym błędem klasyfikacji, zarówno na terenie aglomeracji jak i miasta Poznań, są obszary podmokłe,
+  ze średnim błędem równym kolejno 0,65 i 0,73. Obszary podmokłe we wszystkich zbiorach zajmują pierwsze bądź drugie miejsce z największym procentem
+  powierzchni niepoprawnie sklasyfikowanej - to potwierdza tezę, iż jest to najtrudniejsza klasa do klasyfikacji bazującej na zdjęciach satelitarnych.
+  Kolejnymi klasami z dość dużymi błędami klasyfikacji są obszary trawiaste i krzewiaste, których 44,6 % powierzchni na obszarze aglomeracji oraz 31,7 %
+  w mieście Poznań zostało zaklasyfikowane niepoprawnie, a także zabudowa - kolejno 38 % i 31,2 %. Klasą o największej dokładności klasyfikacji względem
+  BDOT okazały się obszary wodne, ze średnim błędem wynoszącym 0,05 w przypadku miasta Poznań i 0,08 w przypadku aglomeracji. Ze względu na dość znaczące
+  pokrycie powiatu poznańskiego zajmowane przez lasy (ponad 25 % powiatu) oraz pola uprawne (44 %), a także przede wszystkim ich złożoność przestrzenną,
+  klasy te w przypadku aglomeracji również wyróżniają się niskim błędem klasyfikacji - odpowiednio jedynie 0,16 i 0,12.
+  </p>
       <div class = "maps">   
         <img class = "podwojne_wykresy" style = "float:right" src = "grafiki/wykresy/error_matrix/error_aglo.png">
         <p class = "maps_text">Ryc. 6 Rozkład przestrzenny temperatury</p>
@@ -327,24 +337,24 @@
     <thead>
       <tr class = "bordered">
         <th>POKRYCIE TERENU</th>
-        <th>lucas_PA</th>
-        <th>lucas_UA</th>
-        <th>lucas_F1</th>
-        <th>esa_PA</th>
-        <th>esa_UA</th>
-        <th>esa_F1</th>
-        <th>esri_PA</th>
-        <th>esri_UA</th>
-        <th>esri_F1</th>
-        <th>sent_PA</th>
-        <th>sent_UA</th>
-        <th>sent_F1</th>
-        <th>clc_PA</th>
-        <th>clc_UA</th>
-        <th>clc_F1</th>
-        <th>urban_PA</th>
-        <th>urban_UA</th>
-        <th>urban_F1</th>
+        <th>LUCAS - precyzja</th>
+        <th>LUCAS - czułość</th>
+        <th>LUCAS - F1</th>
+        <th>ESA - precyzja</th>
+        <th>ESA - czułość</th>
+        <th>ESA - F1</th>
+        <th>Esri - precyzja</th>
+        <th>Esri - czułość</th>
+        <th>Esri - F1</th>
+        <th>Sentinel-2 - precyzja</th>
+        <th>Sentinel-2 - czułość</th>
+        <th>Sentinel-2 - F1</th>
+        <th>CLC - precyzja</th>
+        <th>CLC - czułość</th>
+        <th>CLC - F1</th>
+        <th>Urban Atlas - precyzja</th>
+        <th>Urban Atlas - czułość</th>
+        <th>Urban Atlas - F1</th>
       </tr>
     </thead>
      <tbody>
@@ -488,24 +498,24 @@
     <thead>
       <tr class = "bordered">
         <th>POKRYCIE TERENU</th>
-        <th>lucas_PA</th>
-        <th>lucas_UA</th>
-        <th>lucas_F1</th>
-        <th>esa_PA</th>
-        <th>esa_UA</th>
-        <th>esa_F1</th>
-        <th>esri_PA</th>
-        <th>esri_UA</th>
-        <th>esri_F1</th>
-        <th>sent_PA</th>
-        <th>sent_UA</th>
-        <th>sent_F1</th>
-        <th>clc_PA</th>
-        <th>clc_UA</th>
-        <th>clc_F1</th>
-        <th>urban_PA</th>
-        <th>urban_UA</th>
-        <th>urban_F1</th>
+        <th>LUCAS - precyzja</th>
+        <th>LUCAS - czułość</th>
+        <th>LUCAS - F1</th>
+        <th>ESA - precyzja</th>
+        <th>ESA - czułość</th>
+        <th>ESA - F1</th>
+        <th>Esri - precyzja</th>
+        <th>Esri - czułość</th>
+        <th>Esri - F1</th>
+        <th>Sentinel-2 - precyzja</th>
+        <th>Sentinel-2 - czułość</th>
+        <th>Sentinel-2 - F1</th>
+        <th>CLC - precyzja</th>
+        <th>CLC - czułość</th>
+        <th>CLC - F1</th>
+        <th>Urban Atlas - precyzja</th>
+        <th>Urban Atlas - czułość</th>
+        <th>Urban Atlas - F1</th>
       </tr>
     </thead>
      <tbody>
