--- a/strona/index.html
+++ b/strona/index.html
@@ -44,22 +44,18 @@
     <div class = "w3-row-padding w3-padding-32 w3-container w3-content" style = "max-width:1100px">
        <h1>Wprowadzenie</h1></br>
        <p class = "paragraf">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel maximus mauris, id hendrerit massa. 
-        Vivamus commodo leo quis diam venenatis, nec cursus dui consequat. Nullam ante augue, condimentum quis feugiat quis, 
-        viverra vulputate metus. Ut a maximus odio. Sed quis lacinia metus. Sed mollis, nisl sit amet ultrices maximus, lectus 
-        felis porttitor ipsum, ut iaculis risus quam non quam. Nullam eu laoreet erat. Sed ut magna sed leo ullamcorper efficitur 
-        nec nec tortor. Vivamus diam est, euismod ut dolor eu, tristique pharetra ipsum.
+        Poniższa publikacja jest wynikiem projektu badawczego przeprowadzonego przez Sekcję Geoinformacji Studenckiego Koła Naukowego
+         na Uniwersytecie im. Adama Mickiewicza w Poznaniu. Głównym celem projektu było porównanie dokładności różnych źródeł danych
+          obejmujących globalne oraz krajowe pokrycie i użytkowanie terenu na przykładzie miasta Poznań i powiatu poznańskiego.
     </p>
     <p class = "paragraf">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel maximus mauris, id hendrerit massa. 
-      Vivamus commodo leo quis diam venenatis, nec cursus dui consequat. Nullam ante augue, condimentum quis feugiat quis, 
-      viverra vulputate metus. Ut a maximus odio. Sed quis lacinia metus. Sed mollis, nisl sit amet ultrices maximus, lectus 
-      felis porttitor ipsum, ut iaculis risus quam non quam. Nullam eu laoreet erat. Sed ut magna sed leo ullamcorper efficitur 
-      nec nec tortor. Vivamus diam est, euismod ut dolor eu, tristique pharetra ipsum.
-      Maecenas dapibus urna eu consequat eleifend. Nullam eu lacus tortor. Praesent feugiat dictum quam non fringilla. Nullam 
-      quis mollis enim, nec pharetra elit. Aenean eleifend nisl at nunc posuere scelerisque. Curabitur posuere neque dui, quis 
-      posuere lorem eleifend sit amet. Praesent sit amet porttitor tortor, sed laoreet odio. Aliquam erat volutpat. Nullam 
-      sapien orci, vehicula sit amet hendrerit eu, congue sed nibh. In hac habitasse platea dictumst. Donec ac ullamcorper sem.
+
+          Powiat poznański oraz miasto Poznań są położone w zachodniej części województwa wielkopolskiego. Obszar ten charakteryzuje bardzo duża
+          powierzchnia terenu - Poznań, miasto na prawach powiatu, znajduje się w pierwszej dziesiątce największych miast w Polsce (262 km&#178).
+          Powiat Poznański, który dzieli się na 17 gmin otaczających Poznań, również jest jednym z największych powiatów w kraju (1900 km&#178).
+          Aglomeracja ta, ze względu na bliskość dużego miasta i terenów wiejskich, wyróżnia się znacznym zróżnicowaniem pokrycia i użytkowania
+          terenu, a także złożonością przestrzenną poszczególnych klas, która może wpływać na różnice w dokładności klasyfikacji terenu przez
+          różne zbiory danych. 
  </p>
  </div>
  <div class = "w3-row-padding w3-padding-32 w3-container w3-content" style = "max-width:1100px">
